changed all the easy trace stuff